# ai-swe

./: README.md  app.py  config.py  product-definition.ml  pyproject.toml  requirements.txt
prompts/: README.md
prompts/code_generator/: generate_code.txt
prompts/diagram_generator/: architecture_diagram.txt  class_diagram.txt  sequence_diagram.txt
prompts/markdown_parser/: parse_markdown.txt
src/: ai_model.py  code_generator.py  diagram_generator.py  markdown_parser.py  prompt_loader.py
static/: example_spec.md
static/css/: style.css
static/js/: main.js
templates/: index.html
