[project]
name = "ai-swe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.100.0",
    "uvicorn==0.23.0",
    "google-generativeai==0.3.1",
    "markdown==3.5",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "requests==2.31.0",
]
